fix link directory slash for Chabo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a  class="moku" href="/">Moku</a>
-        <a  class="chabo" href="./chabo">Chabo</a>
+        <a  class="chabo" href="./chabo/">Chabo</a>
     </nav>
     <section class="content-area">
         <div class="sidebar">
